# mongold

./: Cargo.toml  README.md
.github/workflows/: security-check.yml  testing.yml
dialect-interface/: Cargo.toml
dialect-interface/src/: lib.rs
dialect-java-driver/: Cargo.toml
dialect-java-driver/src/: lib.rs  main.rs
dialect-java-driver/src/tree_ext/: friendly_capture.rs  infer_mongodb_namespace.rs  mod.rs  predicate_from_driver_method.rs
dialect-java-driver/src/tree_ext/queries/: collection_with_namespace.scm
dialect-java-driver/src/use_cases/: find_one.rs  mod.rs
dialect-java-driver/src/use_cases/queries/: find_one.all_finds.argument_list.scm  find_one.all_finds.scm
dialect-javascript-driver/: Cargo.toml
language-server/: Cargo.toml
language-server/src/: lib.rs
language-server/src/dialect_resolver/: mod.rs
language-server/src/workspace/: mod.rs
linting-engine/: Cargo.toml
mongodb-autocompletion/: Cargo.toml
mongodb-linting-engine/: Cargo.toml
mongodb-query-language/: Cargo.toml
mongodb-query-language/src/: lib.rs
mongodb-query-language/src/execution/: mod.rs
mongodb-query-language/src/filter/: mod.rs
mongodb-query-language/src/values/: mod.rs
mongodb-test-fixtures/: Cargo.toml
mongodb-test-fixtures/src/: lib.rs  version.rs
mongodb-universe/: Cargo.toml
mongodb-universe/src/: lib.rs
mongodb-universe/src/connection/: mod.rs
mongodb-universe/src/insights/: mod.rs
mongodb-universe/src/schema/: mod.rs
src/: main.rs
