[package]
name = "mongold"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
serde_json = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
build-info = { workspace = true }
dialect-interface = { path = "dialect-interface" }
language-server = { path = "language-server" }

######## Workspace Configuration ########
[workspace]
members = [
    "dialect-interface",
    "dialect-java-driver",
    "dialect-javascript-driver",
    "language-server",
    "linting-engine",
    "mongodb-universe",
    "mongodb-query-language",
]

[workspace.dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [ "json" ]}
tracing-appender = "0.2"
tracing-serde = "0.1.3"
serde = "1.0.188"
serde_json = "1.0.107"
url = "2.4.1"
mongodb = { version = "2.7.0", features = ["tokio-sync"] }
directories = "5.0.1"
build-info = "0.0.33"
tree-sitter = "0.20.10"

######## Build Configuration ########
[build-dependencies]
build-info-build = "0.0.33"

[profile.release]
strip = true # strip debugging symbols
opt-level = "z" # optimise for size
lto = true # link time optimisation
panic = "abort"