[package]
name = "dialect-java-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-java = "0.20.2"
dialect-interface = { path = "../dialect-interface" }
mongodb-query-language = { path = "../mongodb-query-language" }