[package]
name = "language-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lsp-server = "0.7.4"
lsp-types = "0.94.1"
tracing = { workspace = true }
url = { workspace = true }
tree-sitter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dialect-interface = { path = "../dialect-interface" }
dialect-java-driver = { path = "../dialect-java-driver" }

[dev-dependencies]
tree-sitter-java = "0.20.2"